--- a/datenschutzerklaerung/index.html
+++ b/datenschutzerklaerung/index.html
@@ -10,7 +10,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/impressum">Impressum</a></li>
-        		<li><a href="/datenschutz">Datenschutzerklärung</a></li>
+        		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
     		</ul>
 		</nav>
 		<div class="container">
