--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
+        		<li><a href="/">Startseite</a></li>
+	        	<li><a href="/about">Über mich</a></li>
         		<li><a href="/impressum">Impressum</a></li>
         		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
     		</ul>
