--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hallo, ich bin Ramona Pagonis!</h1>
-				<p>:)...</a></p>
+			<p>Selbstbestimmung, Achtsamkeit, Entspannung im Alltag, Selbstfürsorge, Ernährung</p>
+<p>Ich hatte lange Zeit keinen guten Draht zu mir und wusste nicht, was ich eigentlich will, obwohl ich lange und
+ständig auf der Suche war. Nach und Nach habe ich in den letzten Jahren aber gelernt, wer ich bin, was mich
+	ausmacht und dass ich genau so richtig bin, wie ich bin.</p>
+<p>Die verschiedenen Ausbildungen und zwischenmenschlichen Erfahrungen in den letzten Jahren haben mir
+ermöglicht, mich über meine Grenzen hinaus zu bewegen und mein Innerstes zu erkunden und mir so
+				verschiedene Erkenntnisse ermöglicht.</p>
+<p>Mir ist es ein Anliegen diese Erkenntnisse im Rahmen meiner nebenberuflichen Tätigkeit zu teilen und diese in
+	Form von Meditationen, Vorträgen sowie Kursen weiterzugeben.</p>
+<br>
+<p>Auf dieser Seite können Sie sich daher über mich und meine Angebote informieren. Wenn Sie ein Thema
+anspricht, dann treten Sie mit mir in Kontakt und wir können über Preise und Ausgestaltung gemeinsam sprechen.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
