--- a/datenschutzerklaerung/index.html
+++ b/datenschutzerklaerung/index.html
@@ -9,6 +9,8 @@
     		<ul>
         		<li><a href="/">Startseite</a></li>
 	        	<li><a href="/about">Über mich</a></li>
+	        	<li><a href="/meditation">Meditation</a></li>
+	        	<li><a href="/confidimus">Confidimus</a></li>
         		<li><a href="/impressum">Impressum</a></li>
         		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
     		</ul>
