--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,36 @@
-Test
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Ramona Pagonis</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Startseite</a></li>
+	        	<li><a href="/about">Über mich</a></li>
+	        	<li><a href="/meditation">Meditation</a></li>
+	        	<li><a href="/confidimus">Confidimus</a></li>
+        		<li><a href="/impressum">Impressum</a></li>
+        		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+			<p>• Das mache ich:<br>
+ich bin nebenberuflich als Coach für intuitives Essen als Partnerin von confidimus tätig, aber auch als
+Meditationsleiterin. Ich biete deshalb individuell miteinander abgestimmte Termine für meine Angebote an.
+        Hauptberuflich arbeite ich aktuell als Sozialpädagogin an einer Schule in Nürnberg.</p>
+<p>• Erfahrungen, Ausbildungen<br>
+Ich habe die Ausbildung als Erzieherin absolviert, in diesem Beruf auch mehrere Jahre gearbeitet (vor allem mit
+Grundschulkindern) und dann berufsbegleitend das Studium zur Sozialpädagogin absolviert. Währenddessen habe
+ich mehrere Fortbildungen, z.B. die Ausbildung zur Onlineberaterin gemacht. Nach meinem Studium habe ich als
+Sozialpädagogin angefangen zu arbeiten. Währenddessen habe ich die Weiterbildung zur Meditationsleiterin bei
+fitmedi im Fernstudium abgeschlossen. Im Oktober 2020 habe ich mich zum Coach für intuitives Essen in Familien
+bei confidimus ausbilden lassen und bin nun hier als Partnerin tätig. Mehr zu confidimus und über mich zu diesem
+        Thema gibt es hier.</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+	</body>
+</html>
