--- a/confidimus/index.html
+++ b/confidimus/index.html
@@ -28,24 +28,25 @@ vielen Ernährungsregeln und –dogmen, die existieren,<br>
 undTipps,wie Eltern den Nachwuchs zu vermeintlich „guten Essern“ erziehen, gibt es einfach sehr viele. Oft fühlen
 sich die Mütter und Väter davon überfordert und sind verunsichert.<br>
 Diese Verunsicherung kann zu starren Regeln führen und den inneren Ernährungskompass von Kindern stören, so
-dass sie die Verbindung zu ihrer Körperintelligenz verlieren.<br>
+dass sie die Verbindung zu ihrer Körperintelligenz verlieren.
+	
   „Confidimus“ geht hier einen alternativen Weg:</p>
 <p>Der menschliche Körper ist ein Wunderwerk, vor allem bei kleinen Kindern sieht man dies noch ganz deutlich: sie
 wissen ganz genau, wann sie Hunger haben und wann sie satt sind, sie entscheiden intuitiv, was sie zu sich
 nehmen möchten und sind in puncto Genuss und Achtsamkeit beim Essen unsere größten Vorbilder. Kinder haben
 noch einen ganz klaren Draht zu ihrer Körperintelligenz, den Eltern wieder finden und vertrauensvoll begleiten
   lernen können.</p>
-<br>
+			
 <p>Ich biete als eine von vielen Partnerinnen im Raum Nürnberg/Fürth/Erlangen daher Vorträge für Teams in Kitas
 aber auch Elternabende und bei Bedarf auch Workshops zum Thema intuitive Ernährung an. Gerne gebe ich auch
 Vorträge in Fachakademien und in pädagogischen Studiengängen.<br>
-Auch Einzelcoachings sind möglich!<br>
-Hier können Sie sich gerne weitergehend über confidimus informieren und mich gerne hierzu kontaktieren. Ein
+	Auch Einzelcoachings sind möglich!</p>
+<p>Hier können Sie sich gerne weitergehend über confidimus informieren und mich gerne hierzu kontaktieren. Ein
 Hinweis: die Partnerinnen bei confidimus agieren regional in ihren jeweiligen Umgebungen und ihnen steht es frei,
 ihre Arbeit selbst zu gestalten. Daher sind auf der Homepage mehr Angebote vorhanden, als Partnerinnen evtl.
   Anbieten. Einfach nachfragen! :-)</p>
 <br>
-<p>Außerdem:<br>
+<p>Außerdem:
 Am 15. März erscheint im Kösel-Verlag von den beiden Gründerinnen Katharina Fantl und Julia Litschko das Buch
 „Dein Kind isst besser als Du denkst!“ genau zu diesem Thema!</p>
     		</div><!-- /.blurb -->
