--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
+		<div body>
 		<nav>
     		<ul>
         		<li><a href="/">Startseite</a></li>
@@ -37,5 +38,6 @@ anspricht, dann treten Sie mit mir in Kontakt und wir können über Preise und A
         		<li><a href="mailto:xxx">email</a></li>
 			</ul>
 		</footer>
+		</div>
 	</body>
 </html>
