--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@ anspricht, dann treten Sie mit mir in Kontakt und wir können über Preise und A
         		<li><a href="mailto:xxx">email</a></li>
 			</ul>
 		</footer>
-		</div>
+		</div><!-- /.body -->
 	</body>
 </html>
