--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div body>
-		<nav>
+		<div navi>
     		<ul>
         		<li><a href="/">Startseite</a></li>
 	        	<li><a href="/about">Über mich</a></li>
@@ -16,7 +16,7 @@
         		<li><a href="/impressum">Impressum</a></li>
         		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
     		</ul>
-		</nav>
+		</div><!-- /.navi -->
 		<div class="container">
     		<div class="blurb">
 			<p>Selbstbestimmung, Achtsamkeit, Entspannung im Alltag, Selbstfürsorge, Ernährung</p>
