--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<div body>
-		<div navi>
+		<div class="body">
+		<div class="navi">
     			<li><a href="/">Startseite</a></li>
 	        	<li><a href="/about">Über mich</a></li>
 	        	<li><a href="/meditation">Meditation</a></li>
