--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
 	</head>
 	<body>
 		<div class="body">
-		<div class="navi">
-    			<li><a href="/">Startseite</a></li>
-	        	<li><a href="/about">Über mich</a></li>
-	        	<li><a href="/meditation">Meditation</a></li>
-	        	<li><a href="/confidimus">Confidimus</a></li>
-        		<li><a href="/impressum">Impressum</a></li>
-        		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
-		</div><!-- /.navi -->
+			<div class="bodymargin">
+				<div class="navi">
+					<li><a href="/">Startseite</a></li>
+					<li><a href="/about">Über mich</a></li>
+					<li><a href="/meditation">Meditation</a></li>
+					<li><a href="/confidimus">Confidimus</a></li>
+					<li><a href="/impressum">Impressum</a></li>
+					<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
+			</div><!-- /.navi -->
 		<div class="container">
-    		<div class="blurb">
+			<div class="blurb">
 			<p>Selbstbestimmung, Achtsamkeit, Entspannung im Alltag, Selbstfürsorge, Ernährung</p>
 <p>Ich hatte lange Zeit keinen guten Draht zu mir und wusste nicht, was ich eigentlich will, obwohl ich lange und
 ständig auf der Suche war. Nach und Nach habe ich in den letzten Jahren aber gelernt, wer ich bin, was mich
@@ -36,6 +37,7 @@ anspricht, dann treten Sie mit mir in Kontakt und wir können über Preise und A
         		<li><a href="mailto:xxx">email</a></li>
 			</ul>
 		</footer>
+			</div><!-- /.bodymargin -->
 		</div><!-- /.body -->
 	</body>
 </html>
