--- a/confidimus/index.html
+++ b/confidimus/index.html
@@ -3,21 +3,21 @@
 	<head>
 		<title>Ramona Pagonis</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="../css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Startseite</a></li>
-	        	<li><a href="/about">Über mich</a></li>
-	        	<li><a href="/meditation">Meditation</a></li>
-	        	<li><a href="/confidimus">Confidimus</a></li>
-        		<li><a href="/impressum">Impressum</a></li>
-        		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
-    		</ul>
-		</nav>
+		<div class="body">
+			<div class="bodymargin">
+				<div class="navi">
+					<li><a href="/">Startseite</a></li>
+					<li><a href="/about">Über mich</a></li>
+					<li><a href="/meditation">Meditation</a></li>
+					<li><a href="/confidimus">Confidimus</a></li>
+					<li><a href="/impressum">Impressum</a></li>
+					<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
+			</div><!-- /.navi -->
 		<div class="container">
-    		<div class="blurb">
+			<div class="blurb">
 			<p>Das Thema „richtige Ernährung“:<br>
 - die Sorge von Eltern und Fachkräften, dass die Kinder sich „falsch“ ernähren (zu dick, zu dünn werden), - die
 vielen Ernährungsregeln und –dogmen, die existieren,<br>
@@ -51,5 +51,8 @@ Am 15. März erscheint im Kösel-Verlag von den beiden Gründerinnen Katharina F
 „Dein Kind isst besser als Du denkst!“ genau zu diesem Thema!</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+				</div><!-- /.bodymargin -->
+			</div><!-- /.body -->
 	</body>
 </html>
+
