--- a/datenschutzerklaerung/index.html
+++ b/datenschutzerklaerung/index.html
@@ -3,21 +3,21 @@
 	<head>
 		<title>Ramona Pagonis</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="../css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Startseite</a></li>
-	        	<li><a href="/about">Über mich</a></li>
-	        	<li><a href="/meditation">Meditation</a></li>
-	        	<li><a href="/confidimus">Confidimus</a></li>
-        		<li><a href="/impressum">Impressum</a></li>
-        		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
-    		</ul>
-		</nav>
+		<div class="body">
+			<div class="bodymargin">
+				<div class="navi">
+					<li><a href="/">Startseite</a></li>
+					<li><a href="/about">Über mich</a></li>
+					<li><a href="/meditation">Meditation</a></li>
+					<li><a href="/confidimus">Confidimus</a></li>
+					<li><a href="/impressum">Impressum</a></li>
+					<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
+			</div><!-- /.navi -->
 		<div class="container">
-    		<div class="blurb">
+			<div class="blurb">
 <h4>Datenschutzerklärung</h4>
 <p>Wir freuen uns sehr über Ihr Interesse an unserem Unternehmen. Datenschutz hat einen besonders
 hohen Stellenwert für die Geschäftsleitung der Meditationsanleitung und Coaching im Bereich Meditation
@@ -513,5 +513,8 @@ Kanzlei WILDE BEUGER SOLMECKE | Rechtsanwälte</a></b> erstellt.
 </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+				</div><!-- /.bodymargin -->
+			</div><!-- /.body -->
 	</body>
 </html>
+
