--- a/meditation/index.html
+++ b/meditation/index.html
@@ -3,21 +3,21 @@
 	<head>
 		<title>Ramona Pagonis</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="../css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Startseite</a></li>
-	        	<li><a href="/about">Über mich</a></li>
-	        	<li><a href="/meditation">Meditation</a></li>
-	        	<li><a href="/confidimus">Confidimus</a></li>
-        		<li><a href="/impressum">Impressum</a></li>
-        		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
-    		</ul>
-		</nav>
+		<div class="body">
+			<div class="bodymargin">
+				<div class="navi">
+					<li><a href="/">Startseite</a></li>
+					<li><a href="/about">Über mich</a></li>
+					<li><a href="/meditation">Meditation</a></li>
+					<li><a href="/confidimus">Confidimus</a></li>
+					<li><a href="/impressum">Impressum</a></li>
+					<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
+			</div><!-- /.navi -->
 		<div class="container">
-    		<div class="blurb">
+			<div class="blurb">
 			<p>Achtsamkeit und Meditation ist in aller Munde. Zu Recht! Achtsamkeit definiert die wertfreie Aufmerksamkeit in
 diesem Moment und ermöglicht die neutrale Betrachtung des Innern (von eigenen Gedanken, der Wahrnehmung
 des Körpers und des Atems etc.) und das Äußere (Gegenstände, Alltagsabläufe, die Natur etc.). Meditation
@@ -30,5 +30,7 @@ Für Einzelpersonen oder kleine Gruppen biete ich außerdem achtsame Spaziergän
 (Nürnberger Süden) an.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+				</div><!-- /.bodymargin -->
+			</div><!-- /.body -->
 	</body>
 </html>
