--- a/about/index.html
+++ b/about/index.html
@@ -3,21 +3,21 @@
 	<head>
 		<title>Ramona Pagonis</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="../css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Startseite</a></li>
-	        	<li><a href="/about">Über mich</a></li>
-	        	<li><a href="/meditation">Meditation</a></li>
-	        	<li><a href="/confidimus">Confidimus</a></li>
-        		<li><a href="/impressum">Impressum</a></li>
-        		<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
-    		</ul>
-		</nav>
+		<div class="body">
+			<div class="bodymargin">
+				<div class="navi">
+					<li><a href="/">Startseite</a></li>
+					<li><a href="/about">Über mich</a></li>
+					<li><a href="/meditation">Meditation</a></li>
+					<li><a href="/confidimus">Confidimus</a></li>
+					<li><a href="/impressum">Impressum</a></li>
+					<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
+			</div><!-- /.navi -->
 		<div class="container">
-    		<div class="blurb">
+			<div class="blurb">
 			<p>• Das mache ich:<br>
 ich bin nebenberuflich als Coach für intuitives Essen als Partnerin von confidimus tätig, aber auch als
 Meditationsleiterin. Ich biete deshalb individuell miteinander abgestimmte Termine für meine Angebote an.
@@ -32,5 +32,7 @@ bei confidimus ausbilden lassen und bin nun hier als Partnerin tätig. Mehr zu c
         Thema gibt es hier.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+				</div><!-- /.bodymargin -->
+			</div><!-- /.body -->
 	</body>
 </html>
