--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			</div><!-- /.navi -->
 		<div class="container">
 			<div class="blurb">
+				<div class="img"><img style="width: 200px; border-radius: 50%;" src="../images/meditation.png"></div>
 			<p>Selbstbestimmung, Achtsamkeit, Entspannung im Alltag, Selbstfürsorge, Ernährung</p>
-				<img style="width: 200px; border-radius: 50%;" src="../images/Herbstblatt.png">
 <p>Ich hatte lange Zeit keinen guten Draht zu mir und wusste nicht, was ich eigentlich will, obwohl ich lange und
 ständig auf der Suche war. Nach und Nach habe ich in den letzten Jahren aber gelernt, wer ich bin, was mich
 	ausmacht und dass ich genau so richtig bin, wie ich bin.</p>
