--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</div><!-- /.navi -->
 		<div class="container">
 			<div class="blurb">
-				<div class="img"><img style="width: 40%;" src="../images/meditation.png"></div>
+				<div class="imgTop"><img style="width: 40%;" src="../images/meditation.png"></div>
 			<p>Selbstbestimmung, Achtsamkeit, Entspannung im Alltag, Selbstfürsorge, Ernährung</p>
 <p>Ich hatte lange Zeit keinen guten Draht zu mir und wusste nicht, was ich eigentlich will, obwohl ich lange und
 ständig auf der Suche war. Nach und Nach habe ich in den letzten Jahren aber gelernt, wer ich bin, was mich
