--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 			</div><!-- /.navi -->
 		<div class="container">
 			<div class="blurb">
-				<div class="img"><img style="width: 40%;" src="../images/Ramonaportraitkleiner.png"></div>
+				<div class="imgTop"><img style="width: 40%;" src="../images/Ramonaportraitkleiner.png"></div>
 			<p>• Das mache ich:<br>
 ich bin nebenberuflich als Coach für intuitives Essen als Partnerin von confidimus tätig, aber auch als
 Meditationsleiterin. Ich biete deshalb individuell miteinander abgestimmte Termine für meine Angebote an.
