--- a/meditation/index.html
+++ b/meditation/index.html
@@ -18,6 +18,7 @@
 			</div><!-- /.navi -->
 		<div class="container">
 			<div class="blurb">
+				<div class="imgTop"><img style="max-width: 300px;" src="../images/beherenow.png"></div>
 			<p>Achtsamkeit und Meditation ist in aller Munde. Zu Recht! Achtsamkeit definiert die wertfreie Aufmerksamkeit in
 diesem Moment und ermöglicht die neutrale Betrachtung des Innern (von eigenen Gedanken, der Wahrnehmung
 des Körpers und des Atems etc.) und das Äußere (Gegenstände, Alltagsabläufe, die Natur etc.). Meditation
@@ -28,6 +29,11 @@ gesunden Lebensführung beizutragen. Mein Schwerpunkt liegt auf Meditationen im 
 <p>Ich biete daher Meditationseinheiten auf Anfrage für Gruppen, Teams, Kollegien etc. vor Ort an.
 Für Einzelpersonen oder kleine Gruppen biete ich außerdem achtsame Spaziergänge im Steinbrüchlein
 (Nürnberger Süden) an.</p>
+				<div class="imgBot">
+					<img style="max-width: 300px;" src="../images/kollegen.png">
+					<img style="max-width: 300px;" src="../images/team.png">
+					<img style="max-width: 300px;" src="../images/work.png">
+				</div><!-- /.imgBot -->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 				</div><!-- /.bodymargin -->
