--- a/meditation/index.html
+++ b/meditation/index.html
@@ -18,8 +18,10 @@
 			</div><!-- /.navi -->
 		<div class="container">
 			<div class="blurb">
-				<div class="imgTop"><img style="max-width: 300px;" src="../images/beherenow.png"></div>
-			<p>Achtsamkeit und Meditation ist in aller Munde. Zu Recht! Achtsamkeit definiert die wertfreie Aufmerksamkeit in
+				<div style="text-align: center; float: left; padding-right: 20px;">
+					<img style="max-width: 300px;" src="../images/beherenow.png">
+				</div>
+			<p style="padding-top: 50px;">Achtsamkeit und Meditation ist in aller Munde. Zu Recht! Achtsamkeit definiert die wertfreie Aufmerksamkeit in
 diesem Moment und ermöglicht die neutrale Betrachtung des Innern (von eigenen Gedanken, der Wahrnehmung
 des Körpers und des Atems etc.) und das Äußere (Gegenstände, Alltagsabläufe, die Natur etc.). Meditation
 ermöglicht, Stress zu reduzieren und den Körper sowie den Geist wieder zu entspannen und somit zu einer
