--- a/meditation/index.html
+++ b/meditation/index.html
@@ -33,8 +33,8 @@ Für Einzelpersonen oder kleine Gruppen biete ich außerdem achtsame Spaziergän
 (Nürnberger Süden) an.</p>
 				<div class="imgBot">
 					<img style="max-width: 300px;" src="../images/kollegen.png">
-					<img style="max-width: 300px;" src="../images/team.png">
-					<img style="max-width: 300px;" src="../images/work.png">
+					<img style="max-width: 300px; padding-left: 20px;" src="../images/team.png">
+					<img style="max-width: 300px; padding-left: 20px;" src="../images/work.png">
 				</div><!-- /.imgBot -->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
