--- a/meditation/index.html
+++ b/meditation/index.html
@@ -18,7 +18,7 @@
 			</div><!-- /.navi -->
 		<div class="container">
 			<div class="blurb">
-				<div style="text-align: center; float: left; padding-right: 20px;">
+				<div style="float: left; padding-right: 20px;">
 					<img style="max-width: 300px;" src="../images/beherenow.png">
 				</div>
 			<p style="padding-top: 50px;">Achtsamkeit und Meditation ist in aller Munde. Zu Recht! Achtsamkeit definiert die wertfreie Aufmerksamkeit in
