--- a/meditation/index.html
+++ b/meditation/index.html
@@ -31,7 +31,7 @@ gesunden Lebensführung beizutragen. Mein Schwerpunkt liegt auf Meditationen im 
 <p>Ich biete daher Meditationseinheiten auf Anfrage für Gruppen, Teams, Kollegien etc. vor Ort an.
 Für Einzelpersonen oder kleine Gruppen biete ich außerdem achtsame Spaziergänge im Steinbrüchlein
 (Nürnberger Süden) an.</p>
-				<div class="imgBot">
+				<div class="imgBot" style="margin-top: 20px;">
 					<img style="max-width: 300px;" src="../images/kollegen.png">
 					<img style="max-width: 300px; padding-left: 20px;" src="../images/team.png">
 					<img style="max-width: 300px; padding-left: 20px;" src="../images/work.png">
