--- a/about/index.html
+++ b/about/index.html
@@ -19,17 +19,15 @@
 			<div class="blurb">
 				<div class="imgTop" style="float: right;"><img style="max-width: 300px;" src="../images/Ramonaportraitkleiner.png"></div>
 			<p>• Das mache ich:<br>
-ich bin nebenberuflich als Coach für intuitives Essen als Partnerin von confidimus tätig, aber auch als
-Meditationsleiterin. Ich biete deshalb individuell miteinander abgestimmte Termine für meine Angebote an.
-        Hauptberuflich arbeite ich aktuell als Sozialpädagogin an einer Schule in Nürnberg.</p>
+Ich bin Hobby Illustratorin für Kinderzeichnungen und des Weiteren Partnerin bei confidimus. 
+Ich biete deshalb individuell miteinander abgestimmte Termine für meine Angebote an.  
+Hauptberuflich arbeite ich aktuell als Sozialpädagogin.</p>
 <p>• Erfahrungen, Ausbildungen<br>
-Ich habe die Ausbildung als Erzieherin absolviert, in diesem Beruf auch mehrere Jahre gearbeitet (vor allem mit
-Grundschulkindern) und dann berufsbegleitend das Studium zur Sozialpädagogin absolviert. Währenddessen habe
-ich mehrere Fortbildungen, z.B. die Ausbildung zur Onlineberaterin gemacht. Nach meinem Studium habe ich als
-Sozialpädagogin angefangen zu arbeiten. Währenddessen habe ich die Weiterbildung zur Meditationsleiterin bei
-fitmedi im Fernstudium abgeschlossen. Im Oktober 2020 habe ich mich zum Coach für intuitives Essen in Familien
-bei confidimus ausbilden lassen und bin nun hier als Partnerin tätig. Mehr zu confidimus und über mich zu diesem
-        Thema gibt es hier.</p>
+Ich habe die Ausbildung als Erzieherin absolviert, in diesem Beruf auch mehrere Jahre gearbeitet (vor allem mit Grundschulkindern) und in dieser Zeit berufsbegleitend das Studium zur Sozialpädagogin absolviert. 
+Währenddessen habe ich mehrere Fortbildungen, z.B. die Ausbildung zur Onlineberaterin gemacht. 
+Nach meinem Studium habe ich als Sozialpädagogin angefangen zu arbeiten. Von 2019 bis 2020 habe ich die Weiterbildung zur Meditationsleiterin bei fitmedi im Fernstudium abgeschlossen. Im Oktober 2020 habe ich mich zudem zum Coach für intuitives Essen in Familien bei confidimus ausbilden lassen und bin nun hier als Partnerin tätig. Mehr zu confidimus und über mich zu diesem Thema finden Sie hier (Link zu confidimus.de). 
+Ich bin zudem Hobby-Illustratorin! Ich habe schon als Kind das Zeichnen sehr innig geliebt und dieses Hobby wieder für mich entdeckt.</p>
+	
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 				</div><!-- /.bodymargin -->
