--- a/confidimus/index.html
+++ b/confidimus/index.html
@@ -28,26 +28,18 @@ undTipps,wie Eltern den Nachwuchs zu vermeintlich „guten Essern“ erziehen, g
 sich die Mütter und Väter davon überfordert und sind verunsichert.<br>
 Diese Verunsicherung kann zu starren Regeln führen und den inneren Ernährungskompass von Kindern stören, so
 dass sie die Verbindung zu ihrer Körperintelligenz verlieren.
-	
-  „Confidimus“ geht hier einen alternativen Weg:</p>
-<p>Der menschliche Körper ist ein Wunderwerk, vor allem bei kleinen Kindern sieht man dies noch ganz deutlich: sie
-wissen ganz genau, wann sie Hunger haben und wann sie satt sind, sie entscheiden intuitiv, was sie zu sich
-nehmen möchten und sind in puncto Genuss und Achtsamkeit beim Essen unsere größten Vorbilder. Kinder haben
-noch einen ganz klaren Draht zu ihrer Körperintelligenz, den Eltern wieder finden und vertrauensvoll begleiten
-  lernen können.</p>
-			
-<p>Ich biete als eine von vielen Partnerinnen im Raum Nürnberg/Fürth/Erlangen daher Vorträge für Teams in Kitas
-aber auch Elternabende und bei Bedarf auch Workshops zum Thema intuitive Ernährung an. Gerne gebe ich auch
-Vorträge in Fachakademien und in pädagogischen Studiengängen.<br>
-	Auch Einzelcoachings sind möglich!</p>
-<p>Hier können Sie sich gerne weitergehend über confidimus informieren und mich gerne hierzu kontaktieren. Ein
-Hinweis: die Partnerinnen bei confidimus agieren regional in ihren jeweiligen Umgebungen und ihnen steht es frei,
-ihre Arbeit selbst zu gestalten. Daher sind auf der Homepage mehr Angebote vorhanden, als Partnerinnen evtl.
-  Anbieten. Einfach nachfragen! :-)</p>
 <br>
-<p>Außerdem:
-Am 15. März erscheint im Kösel-Verlag von den beiden Gründerinnen Katharina Fantl und Julia Litschko das Buch
-„Dein Kind isst besser als Du denkst!“ genau zu diesem Thema!</p>
+  „Confidimus“ geht hier einen alternativen Weg:</p>
+<p>Der menschliche Körper ist ein Wunderwerk, vor allem bei kleinen Kindern sieht man dies noch ganz deutlich: 
+sie wissen ganz genau, wann sie Hunger haben und wann sie satt sind, sie entscheiden intuitiv, was sie zu sich nehmen möchten und sind in puncto Genuss und Achtsamkeit beim Essen unsere größten Vorbilder. 
+Kinder haben noch einen ganz klaren Draht zu ihrer Körperintelligenz, den Erwachsene wieder finden und vertrauensvoll begleiten lernen können. </p>
+			
+<p>Auch ich habe eine persönliche Geschichte zu Diäten und Ernährung, welche ich mit dem intuitiven Essen endlich anfangen konnte, aufzulösen. 
+Immer wieder dreht es sich darum, achtsam auf sich zu hören, Hunger und Sättigung  zu fühlen, Glaubenssätze aufzulösen und seinen Körper (wieder) zu spüren. </p>
+<br> 
+<p>Ich biete (als eine von vielen Partnerinnen Deutschlands, Österreich und der Schweiz) im Raum Nürnberg daher Analysegespräche, Vorträge und Coachings für Einzelpersonen, Eltern bzw. Familien und Fachkräfte an. 
+Auch online! </p>
+
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 				</div><!-- /.bodymargin -->
