--- a/confidimus/index.html
+++ b/confidimus/index.html
@@ -17,17 +17,19 @@
 			</div><!-- /.navi -->
 		<div class="container">
 			<div class="blurb">
+				<!--Foto LöffelGabel-->
 			<p>Das Thema „richtige Ernährung“:<br>
 - die Sorge von Eltern und Fachkräften, dass die Kinder sich „falsch“ ernähren (zu dick, zu dünn werden), - die
 vielen Ernährungsregeln und –dogmen, die existieren,<br>
 - die Ernährungspyramide befolgen,<br>
         - Machtkämpfe am Esstisch...</p>
+				<!--Foto Kochen Kinder-->
 <br>
 <p>Familen beschäftigen Fragen wie: Wie ernähren wir unser Kind gesund? Wie viel Zucker ist okay? Und so weiter...
 undTipps,wie Eltern den Nachwuchs zu vermeintlich „guten Essern“ erziehen, gibt es einfach sehr viele. Oft fühlen
 sich die Mütter und Väter davon überfordert und sind verunsichert.<br>
 Diese Verunsicherung kann zu starren Regeln führen und den inneren Ernährungskompass von Kindern stören, so
-dass sie die Verbindung zu ihrer Körperintelligenz verlieren.
+	dass sie die Verbindung zu ihrer Körperintelligenz verlieren. </p>
 <br>
   „Confidimus“ geht hier einen alternativen Weg:</p>
 <p>Der menschliche Körper ist ein Wunderwerk, vor allem bei kleinen Kindern sieht man dies noch ganz deutlich: 
