--- a/confidimus/index.html
+++ b/confidimus/index.html
@@ -29,9 +29,9 @@ vielen Ernährungsregeln und –dogmen, die existieren,<br>
 undTipps,wie Eltern den Nachwuchs zu vermeintlich „guten Essern“ erziehen, gibt es einfach sehr viele. Oft fühlen
 sich die Mütter und Väter davon überfordert und sind verunsichert.<br>
 Diese Verunsicherung kann zu starren Regeln führen und den inneren Ernährungskompass von Kindern stören, so
-	dass sie die Verbindung zu ihrer Körperintelligenz verlieren. 
-<br>
-„Confidimus“ geht hier einen alternativen Weg:</p>
+	dass sie die Verbindung zu ihrer Körperintelligenz verlieren. </p>
+<p> <br> 
+	„Confidimus“ geht hier einen alternativen Weg:</p>
 <p>Der menschliche Körper ist ein Wunderwerk, vor allem bei kleinen Kindern sieht man dies noch ganz deutlich: 
 sie wissen ganz genau, wann sie Hunger haben und wann sie satt sind, sie entscheiden intuitiv, was sie zu sich nehmen möchten und sind in puncto Genuss und Achtsamkeit beim Essen unsere größten Vorbilder. 
 Kinder haben noch einen ganz klaren Draht zu ihrer Körperintelligenz, den Erwachsene wieder finden und vertrauensvoll begleiten lernen können. </p>
