--- a/confidimus/index.html
+++ b/confidimus/index.html
@@ -42,7 +42,7 @@ Immer wieder dreht es sich darum, achtsam auf sich zu hören, Hunger und Sättig
 <p>Ich biete (als eine von vielen Partnerinnen Deutschlands, Österreich und der Schweiz) im Raum Nürnberg daher Analysegespräche, Vorträge und Coachings für Einzelpersonen, Eltern bzw. Familien und Fachkräfte an. 
 Auch online! </p>
 <br>
-<p> Hier (das „hier“ als Verlinkung zu confidimus) können Sie sich gerne weitergehend über confidimus informieren und mich kontaktieren. </p>		
+<p> Hier <!--(das „hier“ als Verlinkung zu confidimus)--> können Sie sich gerne weitergehend über confidimus informieren und mich kontaktieren. </p>		
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 				</div><!-- /.bodymargin -->
