--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p>Herzlich Willkommen auf meiner Homepage!</p>
 <p>Hier gibt es Informationen zu mir als Person, und über meine Angebote. </p>
 <p>Viel Spaß beim Stöbern! </p>
-
+<!--Illustration einfügen-->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
