--- a/confidimus/index.html
+++ b/confidimus/index.html
@@ -35,7 +35,7 @@ Diese Verunsicherung kann zu starren Regeln führen und den inneren Ernährungsk
 <p>Der menschliche Körper ist ein Wunderwerk, vor allem bei kleinen Kindern sieht man dies noch ganz deutlich: 
 sie wissen ganz genau, wann sie Hunger haben und wann sie satt sind, sie entscheiden intuitiv, was sie zu sich nehmen möchten und sind in puncto Genuss und Achtsamkeit beim Essen unsere größten Vorbilder. 
 Kinder haben noch einen ganz klaren Draht zu ihrer Körperintelligenz, den Erwachsene wieder finden und vertrauensvoll begleiten lernen können. </p>
-			
+<!-- Foto Sandwich -->			
 <p>Auch ich habe eine persönliche Geschichte zu Diäten und Ernährung, welche ich mit dem intuitiven Essen endlich anfangen konnte, aufzulösen. 
 Immer wieder dreht es sich darum, achtsam auf sich zu hören, Hunger und Sättigung  zu fühlen, Glaubenssätze aufzulösen und seinen Körper (wieder) zu spüren. </p>
 <br> 
