--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<li><a href="/datenschutzerklaerung">Datenschutzerklärung</a></li>
 			</div><!-- /.navi -->
 		<div class="container">
-			<div class="blurb">
+			<div class="blurb"> <!-- Anderes Foto-->
 				<div class="imgTop"><img style="width: 40%; padding-bottom: 20px;" src="../images/meditation.png"></div>
 			<p>Herzlich Willkommen auf meiner Homepage!</p>
 <p>Hier gibt es Informationen zu mir als Person, und über meine Angebote. </p>
